--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,88 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  background-color: black;
+  color: rgb(238, 236, 236);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main{
+  width: 300px;
+  margin: auto;
+  background-color: transparent;
+  margin-top: 30px;
+}
+.search{
+  text-align: center;
+  width: 300px;
+  padding: 20px;
+  border: 2px solid rgb(90, 94, 91);
+  border-radius: 10px;
+}
+input[type="text"] {
+  padding: 8px;
+  margin: 10px;
+  background-color: transparent;
+  border: 1px solid rgb(128, 126, 126);
+  height: 10px;
+  color: white;
+}
+
+
+button {
+  padding: 5px 15px;
+  background-color: rgb(55, 59, 56);
+  color: white;
+  height: 28px;
+  margin: 10px;
+  cursor: pointer;
+}
+
+.loader-container {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-top: 20px;
+  color: rgb(226, 223, 223);
+}
+
+.loader {
+  border: 4px solid #ffffff;
+  border-top: 4px solid #34a6db;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 1s linear infinite;
+  margin-right: 10px;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.container {
+  margin-top: 20px;
+  color: rgb(5, 5, 5);
+  width: 300px;
+  border: 1px solid rgb(2, 20, 10);
+  padding: 20px;
+  text-align: center;
+  background-color: rgb(186, 190, 188);
+  border-radius: 10px;
+}
+button a{
+  color: white;
+  text-decoration: none;
+}
+.container img {
+  width: 150px;
+  height: 150px;
+  border-radius: 10%;
+  margin-bottom: 10px;
+  border: 1px solid rgb(12, 12, 12);
+  
+}
+.container strong{
+  color: rgb(83, 5, 9);
+}
+.container p {
+  margin-bottom: 5px;
 }
